# intro-to-prefect

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
database/init/: init.sql
src/pipeline/: main.py
